--- a/src/main/resources/org/example/login.fxml
+++ b/src/main/resources/org/example/login.fxml
@@ -15,7 +15,7 @@
 
         <HBox alignment="CENTER">
             <ImageView>
-                <Image url="@images/utv-logo.png" requestedWidth="320" preserveRatio="true"/>
+                <Image url="@images/Habibi-Clean-2.png" requestedWidth="250" preserveRatio="true"/>
             </ImageView>
         </HBox>
         <HBox alignment="CENTER">
